# gov-ai-assistant

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  test_config.py  test_schema.py  test_tool_base.py
docs/: agent_interaction.md  architecture.md  design_notes.md
gov_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt
scripts/: run_demo.py  setup_models.sh
src/agents/: analyst.py  base.py  critic.py  drafter.py  hermes.py  planner.py
src/api/: main.py
src/api/routes/: analyze.py  health.py
src/audit/: trail.py
src/core/: config.py  exceptions.py  logging.py  schemas.py
src/gov_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/memory/: episodic.py  manager.py  semantic.py
src/models/: embedding_client.py  ollama_client.py
src/orchestrator/: praison.py
src/tools/: base.py  compliance_engine.py  doc_comparator.py  doc_generator.py  gr_analyzer.py  schema_validator.py
src/workflow/: deerflow.py
tests/unit/: test_tools.py
